@@ -10,6 +10,7 @@ Stable versions
 	- add sanity check to MDL pattern loader
 	- add sanity check to RAD pattern loader
 	- add sanity check to MGT pattern loader
+	- add sanity check to IMF pattern loader
 	- add sanity check to OKT sample chunk loader
 	- add sanity check for AMD number of patterns
 	- add sanity check for STX number of patterns
